2006-11-02  Tim-Philipp Müller  <tim at centricular dot net>

	Based on patch by: Jan David Mol  <j.j.d.mol at tudelft nl>

	* plugins/elements/gstfilesink.c: (gst_file_sink_class_init):
	* plugins/elements/gstfilesrc.c: (gst_file_src_class_init),
	(gst_file_src_map_small_region), (gst_file_src_create_mmap):
	  Printf fixes for gsize parameters on PPC/OSX (#369366). Also,
	  don't cast to long long for portability reasons, but use
	  GLib's types instead.

2006-10-30  Michael Smith  <msmith@fluendo.com>

	* plugins/elements/gstfdsrc.c: (gst_fd_src_update_fd):
	  Get the arguments to lseek() the right way around.
	  Fixes 367677.

2006-10-30  Wim Taymans  <wim@fluendo.com>

	Patch by: gorshkov <gorshkov at oghma dot on dot ca>

	* gst/gstinfo.h:
	_declspec should be __declspec (two underscores, not one). Fixes 366572.

2006-10-28  Tim-Philipp Müller  <tim at centricular dot net>

	Patch by: Kjartan Maraas  <kmaraas at gnome org>

	* docs/design/part-MT-refcounting.txt:
	* docs/random/wtay/capsnego2-docs:
	* gst/gstclock.c:
	* gst/gstxml.c:
	  Typo fixes (#366212).

2006-10-28  Wim Taymans  <wim@fluendo.com>

	Patch by: Sergey Scobich <sergey dot scobich at gmail dot com>

	* gst/gst.c:
	* win32/common/libgstbase.def:
	* win32/common/libgstreamer.def:
	* win32/vs8/libgstbase.vcproj:
	* win32/vs8/libgstcontroller.vcproj:
	Add needed entries in .def files.
	Use HAVE_UNISTD_H.
	Rearrange def files in vs8 solutions. Fixes #366286.

2006-10-28  Tim-Philipp Müller  <tim at centricular dot net>

	* win32/common/gstconfig.h:
	  Add GST_SEGMENT_FORMAT and GST_USING_PRINTF_EXTENSION to the
	  hand-made win32 gstconfig.h. Fixes #366321.

2006-10-27  Wim Taymans  <wim@fluendo.com>

	* gst/gstghostpad.c: (gst_proxy_pad_do_acceptcaps),
	(gst_ghost_pad_new_full):
	Make acceptcaps return TRUE when we don't have a target, just like
	setcaps does.

2006-10-27  Wim Taymans  <wim@fluendo.com>

	* libs/gst/base/gstbasetransform.c: (gst_base_transform_chain):